[package]
name = "tts"
version = "0.26.3"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
repository = "https://github.com/ndarilek/tts-rs"
description = "High-level Text-To-Speech (TTS) interface"
documentation = "https://docs.rs/tts"
license = "MIT"
exclude = ["*.cfg", "*.yml"]
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
speech_dispatcher_0_9 = ["speech-dispatcher/0_9"]
speech_dispatcher_0_10 = ["speech-dispatcher/0_10"]
speech_dispatcher_0_11 = ["speech-dispatcher/0_11"]
default = ["speech_dispatcher_0_11"]

[dependencies]
dyn-clonable = "0.9"
oxilangtag = "0.1"
lazy_static = "1"
log = "0.4"
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "1"

[dev-dependencies]
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
tolk = { version = "0.5", optional = true }
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections",
    "Media_Core",
    "Media_Playback",
    "Media_SpeechSynthesis",
    "Storage_Streams",
] }

[target.'cfg(target_os = "linux")'.dependencies]
speech-dispatcher = { version = "0.16", default-features = false }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = "0.6"
objc2-avf-audio = { version = "0.3", default-features = false, features = [
    "std",
    "AVSpeechSynthesis",
] }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSArray",
    "NSDate",
    "NSEnumerator",
    "NSObjCRuntime",
    "NSRunLoop",
    "NSString",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSSpeechSynthesizer",
] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "EventTarget",
    "SpeechSynthesis",
    "SpeechSynthesisErrorCode",
    "SpeechSynthesisErrorEvent",
    "SpeechSynthesisEvent",
    "SpeechSynthesisUtterance",
    "SpeechSynthesisVoice",
    "Window",
] }

[target.'cfg(target_os="android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[package.metadata.docs.rs]
no-default-features = true
features = ["speech_dispatcher_0_11"]
